package ProjetoBanco.interfaces;

public interface AplicarRendimento {
    void aplicarRendimento();
}
