package ProjetoBanco.interfaces;

public interface CobrancaMensal {
    void pagarMensal ();
}
